--- a/src/main/resources/templates/myFavorites.html
+++ b/src/main/resources/templates/myFavorites.html
@@ -69,9 +69,12 @@
         font-size: 12px;
     }
 </style>
-<div class="container mb-4">
+<div class="container mb-4" style="min-height: 526px">
     <div class="row">
         <div class="col-12">
+            <div class="text-left p-4">
+                <a class="btn btn-primary" href="/">Back</a>
+            </div>
             <div class="p-4">
                 <h3>Favorites</h3>
                 <!--list favorite hotels-->
