--- a/src/main/resources/templates/viewDislikes.html
+++ b/src/main/resources/templates/viewDislikes.html
@@ -1,5 +1,8 @@
 <!--Displays users that have disliked the page-->
-<div class="container mb-4">
+<div class="container mb-4" style="min-height: 526px">
+    <div class="p-4">
+        <a class="btn btn-primary" id="back" th:href="@{'/'+${hotelId}+'/details/'}">Back</a>
+    </div>
     <div class="row">
         <div class="col-12">
             <div>
