--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,16 +1,19 @@
-<!--login page-->
 <div class="container" xmlns:th="http://www.thymeleaf.org" style="min-height: 526px">
     <form class="form-signin mt-xl-5" method="post" action="/login">
         <h2 class="form-signin-heading">Sign in</h2>
         <p>
-            <label for="username" class="sr-only">Username</label>
-            <input type="text" id="username" name="username" class="form-control" placeholder="Username" required="">
+            <label for="email" class="sr-only">Email</label>
+            <input type="text" id="email" name="username" class="form-control" placeholder="Email" required=""
+                   autofocus="">
         </p>
         <p>
             <label for="password" class="sr-only">Password</label>
             <input type="password" id="password" name="password" class="form-control" placeholder="Password"
                    required="">
         </p>
+
+        <p class="text-danger" th:if="${hasError}" th:text="${error}"></p>
+
         <button id="submit" class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
     </form>
     <a href="/register" class="btn btn-block btn-light">Register here</a>
