--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -1,7 +1,4 @@
 <!--Register page-->
-<div class="container">
-    <h1 th:if="${hasError}" th:text="${error}"></h1>
-</div>
 <div class="container" style="min-height: 526px">
     <form class="form-signin mt-xl-5" method="post" action="/register">
         <h2 class="form-signin-heading">Register</h2>
@@ -10,7 +7,7 @@
         <h5>Password must contain at least one uppercase Latin character [A-Z].</h5>
         <h5>Password must contain at least one special character like ! @ # & ( ).</h5>
         <h5>Password must contain a length of at least 8 characters and a maximum of 20 characters.</h5>
-        <h5>Username must be original.</h5>
+        <h5>Username and Email must be original.</h5>
         <br>
         <p>
             <label for="email" class="sr-only">Email</label>
@@ -27,6 +24,7 @@
             <input type="password" id="password" name="password" class="form-control" placeholder="Password"
                    required="">
         </p>
+        <p class="text-danger" th:if="${hasError}" th:text="${error}"></p>
         <button class="btn btn-lg btn-primary btn-block" type="submit">Sign up</button>
     </form>
     <a href="/login" class="btn btn-block btn-light">Already have an user? Login here!</a>
