--- a/src/main/resources/templates/reviewForm.html
+++ b/src/main/resources/templates/reviewForm.html
@@ -16,6 +16,9 @@
 <div class="container">
     <div class="row">
         <div>
+            <div class="p-4">
+                <a class="btn btn-primary" id="back" th:href="@{'/'+${hotelId}+'/details/'}">Back</a>
+            </div>
             <form class="form" action="/review/addEdit" method="POST">
                 <!--some of these are hidden because they are needed for the post method-->
                 <input id="id" type="hidden" name="id" th:value="(${review} != null ? ${review.getId()} : '')">
@@ -35,9 +38,7 @@
                     </ul>
                     <br>
                 </div>
-                <input class="btn btn-primary" type='submit' name="submit" value='Post'/> <a class="btn btn-primary"
-                                                                                             id="back"
-                                                                                             th:href="@{'/'+${hotelId}+'/details/'}">Back</a>
+                <input class="btn btn-primary" type='submit' name="submit" value='Post'/>
             </form>
         </div>
     </div>
