--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -3,7 +3,7 @@
         <h2 class="form-signin-heading">Sign in</h2>
         <p>
             <label for="email" class="sr-only">Email</label>
-            <input type="text" id="email" name="username" class="form-control" placeholder="Email" required=""
+            <input type="email" id="email" name="username" class="form-control" placeholder="Email" required=""
                    autofocus="">
         </p>
         <p>
