--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -11,7 +11,7 @@
         <br>
         <p>
             <label for="email" class="sr-only">Email</label>
-            <input type="text" id="email" name="email" class="form-control" placeholder="Email" required=""
+            <input type="email" id="email" name="email" class="form-control" placeholder="Email" required=""
                    autofocus="">
         </p>
         <p>
